# cuda-x-crunch

./: .dockerignore  .gitignore  ArgParser.hpp  CMakeCache.txt  CMakeLists.txt  Dockerfile  Dockerfile_base  Logger.hpp  README.md  benchmark-cross.py  build-cross.py  build_debug_win.bat  build_release_win.bat  cpu_create3.cpp  cpu_create3search.cpp  cpu_private_key.cpp  cpu_private_key_search.cpp  cpu_scorer.h  create3.cu  create3.h  create3search.cpp  create3search.cu  debug_utils.cpp  debug_utils.hpp  help.hpp  install_cuda_x_crunch.sh  keccak.cu  keccak.h  particle.cu  particle.h  patch_cuda_architectures.py  private_key.cu  private_key.h  private_key_search.cpp  profanity.cu  scorer.cuh  set-version.py  test.cu  test_private_key  test_public_key  (+6 more)
.github/workflows/: base-image.yml  build-self-hosted.yml  build-ubuntu-docker.yml  build-ubuntu.yml  build-win-self-hosted.yml  build-win.yml  display-secrets.yml  release-action.yml  release-build.yml
docker/: Dockerfile  build-and-test.bat
runner/: process.py  runner.py
runtime/: Dockerfile  slim.dockerfile  slim2204.dockerfile  ubuntu2204.dockerfile  ubuntu2404.dockerfile
test/: check_pattern_generation.py  process.py
vast/: Dockerfile
